# unnamed-gamejam

./: Cargo.toml
assets/pixelorama/: back_idle.pxo  floor.pxo  front_idle.pxo  frontwall.pxo  left_idle.pxo  right_idle.pxo  sidewall.pxo
src/: camera.rs  game.rs  main.rs  tilemap.rs
src/game/: animation.rs  movement.rs  player.rs
src/tilemap/: generate.rs
