[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["wayland"] }
bevy_pixel_camera = "0.13.0"
bevy-inspector-egui = "0.23.3"
bevy_rapier2d = "0.25.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
